@@ -6,6 +6,7 @@
 	* Fix crash using GOST for particular platform configurations.
 	* extern C declarations used in the header file.
 	* Removed debug fprintf from resolver.c.
+	* ldns-signzone checks if public key file is for the right zone.
 
 1.6.5
 	* Catch \X where X is a digit as an error.
